--- a/package.json
+++ b/package.json
@@ -3,31 +3,32 @@
   "version": "0.0.9",
   "description": "Augmented math operations in Sass through use of CSS `calc` expressions",
   "main": "_index.scss",
-  "scripts": {
-    "test": "nodemon --exec 'mocha test.js || true'"
+  "directories": {
+    "test": "test"
   },
+  "private": true,
+  "scripts": {
+    "test": "gulp test"
+  },
+  "author": "Lu Nelson",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lunelson/sass-calc.git"
   },
+  "bugs": {
+    "url": "https://github.com/lunelson/sass-calc/issues"
+  },
+  "homepage": "https://github.com/lunelson/sass-calc#readme",
   "keywords": [
     "libsass",
     "sass",
     "calc"
   ],
-  "author": "Lu Nelson",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/lunelson/sass-calc/issues"
-  },
-  "homepage": "https://github.com/lunelson/sass-calc#readme",
-  "dependencies": {
-    "sass-u": "github:lunelson/sass-u"
-  },
   "devDependencies": {
-    "mocha": "^3.1.0",
-    "sass-true": "^2.1.3",
-    "sassdoc": "^2.1.20",
-    "sassdocify": "^0.3.4"
+    "gulp": "^3.9.1",
+    "gulp-diff": "^1.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0"
   }
 }
