Extracted test library to module (sass-pass), added it as devDependency

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   ],
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "sass-pass": "^0.1.2"
   }
 }
