--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "ava --watch --serial"
   },
   "devDependencies": {
-    "@lunelson/sass-throw": "^1.0.1",
+    "@lunelson/sass-throw": "^2.0.0-rc.4",
     "ava": "^1.0.1",
     "del": "^3.0.0",
     "node-sass": "^4.11.0",
@@ -35,14 +35,13 @@
     "write": "^1.0.3"
   },
   "peerDependencies": {
-    "@lunelson/sass-throw": "^2.0.0"
+    "@lunelson/sass-throw": "^2.0.0-rc.4"
   },
   "publishConfig": {
     "access": "public"
   },
   "ava": {
     "verbose": true,
-    "failFast": true,
     "files": [
       "tests/*{.js,.scss}"
     ],
