--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "ava --watch --serial"
   },
   "devDependencies": {
-    "@lunelson/sass-throw": "^2.0.0-rc.4",
+    "@lunelson/sass-throw": "2.1.0",
     "ava": "^1.0.1",
     "del": "^3.0.0",
     "node-sass": "^4.11.0",
@@ -35,7 +35,7 @@
     "write": "^1.0.3"
   },
   "peerDependencies": {
-    "@lunelson/sass-throw": "^2.0.0-rc.4"
+    "@lunelson/sass-throw": "2.1.0"
   },
   "publishConfig": {
     "access": "public"
